css/style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

@font-face {
  font-family: "Cera Pro";
  src: url("../fonts/CeraPro-Light.woff2") format("woff2");
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Cera Pro';
  src: url('../fonts/CeraPro-Black.woff2') format('woff2');
  font-weight: 900;
  font-style: normal;
}


@font-face {
  font-family: 'Cera Pro';
  src: url('../fonts/CeraPro-Bold.woff2') format('woff2');
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: 'Cera Pro';
  src: url('../fonts/CeraPro-Medium.woff2') format('woff2');
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: 'Cera Pro';
  src: url('../fonts/CeraPro-Regular.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
}

body {
  font-family: "Cera Pro", sans-serif;
  margin: 0;

}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}
img{
  width: 100%;
}

.overlay {
  position: fixed;
  inset: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.3);
  display: flex;
  justify-content: center;
  align-items: center;

}

.modal {
  position: relative;
  background: white;
  border-bottom: 10px solid #46A358;
  padding-bottom: 25px;

}

.register {
  width: 500px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}



.close {
  position: absolute;
  top: 13px;
  right: 13px;
  background: none;
  border: none;
  cursor: pointer;
}

.close img {
  width: 18px;
  height: 18px;
}


.auth__tabs {
  margin-top: 52px;
  display: inline-flex;
  gap: 10px;

}

.tab {
  color: #3D3D3D;
  font-size: 20px;
  font-weight: 500;
  line-height: 16px;
  text-decoration: none;
}

.active {
  color: #46A358;
}

.divider {
  font-size: 18px;
  font-weight: 400;
  line-height: 16px;
}

.form {
  width: 300px;
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.form-text {
  font-size: 13px;
  font-weight: 400;
  line-height: 16px;
  color: #3D3D3D;
}

.form input {
  border: 1px solid #EAEAEA;
  border-radius: 6px;
  padding: 12px 14px;
  font-size: 14px;
  font-weight: 400;
  line-height: 16px;

}

.form input::placeholder {
  color: #A5A5A5;
  opacity: 0.5;
}

.register-btn {
  margin-top: 25px;
  /* width: 300px; */
  padding: 16px 0 13px;
  background-color: #46A358;
  border-radius: 5px;
  color: #FFFFFF;
  font-size: 16px;
  font-weight: 700;
  line-height: 16px;
  border: none;
  cursor: pointer;
}

.password {
  background: url("../icons/pswrd_eye.svg") no-repeat right 10px center;

}

.divider-social {
  display: flex;
  align-items: center;
  gap: 10px;
  margin: 20px 0;
}

.divider-social span {
  flex: 1;
  height: 1px;
  background: #e5e5e5;
}

.divider-social p {
  line-height: 16px;
  font-size: 13px;
  font-weight: 400;
  color: #3D3D3D;
  white-space: nowrap;
}

.social-btn {
  width: 100%;
  padding: 13px 0;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 15px;
  border: 1px solid #EAEAEA;
  border-radius: 5px;
  background: #fff;
  font-size: 13px;
  font-weight: 500;
  color: #727272;
  cursor: pointer;
  margin-bottom: 15px;
}

.social-btn img {
  width: 20px;
  height: 20px;
}

.social-login {
  width: 300px;
}

/* HEADER */

.container {
  margin: 0 auto;
  max-width: 1200px;
}

.header {
  padding-top: 30px;

}

.header__inner {
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-bottom: 0.3px solid #46A35880;
  padding-bottom: 18px;
}

.btn {
  display: inline-block;
  background: #46A358;
  color: #FFFFFF;
  text-decoration: none;
  border-radius: 6px;
  font-size: 16px;
  font-weight: 700;
  border: none;
  text-align: center;
  cursor: pointer;
  transition: 0.3s;


}

.btn:hover {
  background: #3d8f4c;
}


.logo {
  margin-right: auto;

}

.logo--img {
  width: 150px;
  height: 34.3px;
}


.login {

  margin-left: auto;

}

.login a {
  text-decoration: none;
}

.nav ul {
  display: flex;
  gap: 50px;
  margin: 0;
  padding: 0;
  list-style: none;
}



.nav .nav-link--active {
  font-weight: 700;

}

.nav ul li a {
  text-decoration: none;
  font-weight: 400;
  font-size: 16px;
  color: #3D3D3D;

}

.nav .nav-link--active::after {
  opacity: 1;
}

.nav-link {
  display: inline-block;
  position: relative;

}

.nav-link::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: -25px;
  width: 100%;
  height: 3px;
  background: #46A358;
  opacity: 0;
  transition: 0.3s;
}

.nav-link:hover {
  font-weight: 700;
  font-size: 16px;
}


.header .btn {
  padding: 7px 17px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 5px;
}



.login-btn img {
  width: 16px;
  height: 16px;
}

/* HERO */
main {
  margin-top: 12px;
  padding-bottom: 82px;
}

.hero-text {
  width: 60%;
  flex-shrink: 0;
}

.hero-image {
  max-width: 500px;
}

.hero-image img {
  width: 100%;
  display: block;
}

.hero-inner {
  display: flex;
  align-items: center;
  background: #f5f5f5;
  padding: 40px;

}

.subtitle {
  font-weight: 500;
  font-size: 14px;
  line-height: 16px;
  text-transform: uppercase;
}

h1 {
  font-weight: 900;
  font-size: 70px;
  line-height: 70px;
  text-transform: uppercase;
  color: #3D3D3D;
}

h1 span {
  color: #46A358;
}

.description {
  padding-right: 114px;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  color: #727272;
}

.hero .btn {
  padding: 11px 27px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-top: 44px;
  text-transform: uppercase;

}

/* ===PRODUCTS=== */

.products .container {
  display: flex;
  align-items: stretch;
  gap: 30px;
}

.products {
  margin-top: 50px;
}


.sidebar {
  padding-top: 14px;
  display: flex;
  flex-direction: column;
  background: #FBFBFB;


}

.sidebar-categories {
  margin-left: 18px;
}

.sidebar h3 {
  font-size: 18px;
  line-height: 16px;
}

.categories {
  list-style: none;
  padding: 0;
  padding-left: 12px;

}

.categories a {
  text-decoration: none;
  color: #3D3D3D;
  font-weight: 400;
  font-size: 15px;
}

.categories li {
  margin-top: 23px;
}

.categories a.active {
  color: #46A358;
  font-weight: 700;
}

.categories a:hover {
  color: #46A358;
}

.sale {
  margin-top: auto;
}

.sale a {
  display: block;
}

.sale img {
  width: 100%;
}

.products-content {
  flex: 1;
}

.products-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}


.tabs {

  display: flex;
  gap: 30px;
  padding: 0;
  list-style: none;


}



.tabs .tabs--active {
  padding-bottom: 7px;
  border-bottom: 2px solid #46A358;
}

.tabs a {
  text-decoration: none;
  color: #3D3D3D;
  font-weight: 400;
  font-size: 15px;
  line-height: 16px;


}

.tabs a:hover {
  color: #46A358;
}

.tabs a {
  position: relative;
  text-decoration: none;
  color: #3D3D3D;
  padding-bottom: 5px;
}




.tabs li a.active {
  color: #46A358;

  font-weight: 700;
  font-size: 15px;
  line-height: 16px;

}





.sort {

  font-size: 15px;
  color: #3D3D3D;
}

.sort #sort {
  border: none;
  cursor: pointer;
}

.products-list {
  display: flex;
  flex-wrap: wrap;
  gap: 30px;
  margin-top: 30px;
}

.product-card {
  width: calc(33.333% - 20px);
}

.product-card img {
  background: #FBFBFB;

}

.product-card-title {
  color: #3D3D3D;
  font-size: 16px;
  line-height: 16px;
}

.product-card-price {
  margin-top: 6px;
  font-weight: 700;
  font-size: 18px;
  line-height: 16px;
}

/*  TOP BANNERS & BLOG */
.blog-section {
  margin-top: 200px;
}

.promo {
  display: flex;
  justify-content: space-between;
  gap: 28px;
}

.promo-card {
  padding-right: 30px;
  width: 50%;
  display: flex;
  align-items: center;
  background: #FBFBFB;
}


.promo-card img {
  margin-top: -100px;
}

.promo-text {
  display: flex;
  flex-direction: column;
  align-items: end;
  justify-content: end;
  text-align: right;
  margin-left: -40px;
}

.promo-text h3 {
  font-weight: 900;
  font-size: 18px;
  line-height: 24px;
  text-transform: uppercase;
  padding-left: 120px;

}

.promo-text p {
  font-size: 14px;
  line-height: 24px;
  color: #727272;
  margin-top: 9px;
}

.promo-text .btn {
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;


  margin-top: 25px;
  margin-bottom: 46px;
  padding: 10px 27px;
}

.blog h2 {
  margin-top: 130px;
  text-align: center;
  font-weight: 700;
  font-size: 30px;
  color: #3D3D3D;
}

.blog p {
  margin-top: 15px;
  text-align: center;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  color: #727272;
}

.blog-list {
  margin-top: 35px;
  display: flex;
  gap: 42px;
  align-items: flex-start;
}

.blog-card {
  flex: 1;
}

.blog-card img {
  width: 100%;

}

.blog-card-text {
  padding: 9px 10px 12px;

}

.blog-card-text span {
  font-weight: 500;
  font-size: 14px;
  line-height: 16px;
  color: #46A358;

}

.blog-card-text h4 {
  margin-top: 4px;
  font-size: 20px;
  line-height: 26px;
  color: #3D3D3D;
}

.blog-card-text p {
  font-size: 14px;
  line-height: 22px;
  color: #727272;
  margin-top: 4px;
  text-align: left;
}

.blog-card-text a {
  font-weight: 500;
  font-size: 14px;
  line-height: 16px;
  color: #3D3D3D;
  text-decoration: none;
  margin-top: 9px;
}

.blog-card-text a:hover {
  color: #46A358;
}



.blog-card-text-h4 {
  padding-right: 32px;
}



/* PAGINATION */
.pagination {
  display: flex;
  justify-content: flex-end;
  gap: 10px;
  margin-top: 90px;
}

.page {
  padding: 9px 16px;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px solid #E5E5E5;
  border-radius: 4px;
  text-decoration: none;
  color: #3D3D3D;
  font-size: 18px;
}

.page.active {
  background: #46A358;
  color: #fff;
  border-color: #46A358;
}

.page:hover {
  background: #46A358;
  color: #fff;
  border-color: #46A358;
}

